--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,22 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+GOOGLE_CLIENT_ID=934660918974-q840k2k05gj7hf3rmk7och5cicmnc1em.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+
+# DB_CONNECTION=pgsql
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
+# DB_DATABASE=sudomanager
+# DB_USERNAME=postgres
+# DB_PASSWORD=171019
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
